# narya

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml  install.sh  narya.service
src/narya/: __init__.py  api.py  main.py  sensor.py
tests/: test_api.py  test_main.py  test_sensor.py
