[tool.poetry]
name = "narya"
version = "0.1.0"
description = "Read from MAX31855 TC chips with RPi."
authors = ["Eric <eric@souder.ca>"]
readme = "README.md"
packages = [{include = "narya", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.109.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0,<1.0.0"}
pydantic = ">=2.0.0,<3.0.0"
spidev = {version = ">=3.6,<4.0", markers = "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"
mypy = ">=1.10.0,<2.0.0"
black = ">=24.1.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
pylint = ">=3.0.0,<4.0.0"
pre-commit = ">=3.6.0,<4.0.0"

[tool.poetry.scripts]
narya = "narya.main:main"

[build-system]
requires = ["poetry-core>=0.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
overwrite_in_place = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/narya --cov-report=html --cov-report=term-missing --cov-fail-under=85"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 88

[tool.coverage.run]
source = ["src/narya"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/narya"]
